Added header template functions, corrected css cosmetic issues, fixed issue when non multiple select becomes multiple

--- a/tests/index.html
+++ b/tests/index.html
@@ -10,7 +10,7 @@
 
 	<script>
 		$(document).ready(function() {
-			$('#test1').jaoselect({dropdown:true, width: 200});
+			$('#test1').jaoselect({dropdown:true, width: 200, multiple: true});
 			$('#test2').jaoselect({dropdown:true});
 
 
@@ -26,11 +26,11 @@
 	<tr>
 		<td>
 			<select id="test1">
-				<option value="1" data-image="images/silk-1.png">value 1</option>
+				<option value="1" data-image="images/silk-1.png" class="test">value 1</option>
 				<option value="2" data-image="images/silk-2.png">value 2</option>
 				<option value="3" data-image="images/silk-3.png">value 3</option>
 				<option value="4" data-image="images/silk-4.png">value 4</option>
-				<option value="5" data-image="images/silk-5.png">value 5</option>
+				<option value="5" data-image="images/silk-5.png">value 5 and very very very very very long title</option>
 			</select>
 		</td>
 		<td>
